style(add-task): adjust z-index for input fields and lists for correct layering

--- a/src/app/features/add-task/components/add-task-content/add-task-content.scss
+++ b/src/app/features/add-task/components/add-task-content/add-task-content.scss
@@ -122,7 +122,8 @@
       opacity: 1;
     }
 
-    &:focus {
+    &:focus,
+    .dropdown-wrapper.is-open & {
       border-color: #124658;
     }
 
@@ -235,8 +236,10 @@
     color: var(--color-text-main);
     font: inherit;
     outline: none;
+    z-index: 51;
 
-    &:focus {
+    &:focus,
+    .dropdown-wrapper.is-open & {
       border-color: #124658;
     }
 
@@ -282,7 +285,7 @@
     top: calc(100% - 0.3rem);
     right: 0;
     left: 0;
-    z-index: 30;
+    z-index: 50;
     overflow-y: auto;
     border-radius: var(--radius-md);
     background-color: var(--color-bg-light);
@@ -384,7 +387,7 @@
     align-items: center;
     justify-content: space-between;
     text-align: left;
-    z-index: 31;
+    z-index: 51;
     cursor: pointer;
   }
 
